Implemented all Auth and Events APIs
